--- a/TPS_ClinicaPyM/nbproject/project.properties
+++ b/TPS_ClinicaPyM/nbproject/project.properties
@@ -67,7 +67,8 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.15.jar}:\
     ${file.reference.jdtcore-3.1.0.jar}:\
     ${file.reference.jfreechart-1.0.12.jar}:\
-    ${file.reference.xml-apis-1.3.02.jar}
+    ${file.reference.xml-apis-1.3.02.jar}:\
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -92,7 +93,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=tps_clinicapym.TPS_ClinicaPyM
+main.class=Acceso_Datos.CLINICA
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
