--- a/TPS_ClinicaPyM/nbproject/project.properties
+++ b/TPS_ClinicaPyM/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.AbsoluteLayout.jar=..\\AbsoluteLayout.jar
 file.reference.bcmail-jdk14-136.jar=..\\bcmail-jdk14-136.jar
 file.reference.bcprov-jdk14-136.jar=..\\bcprov-jdk14-136.jar
 file.reference.commons-beanutils-1.8.0.jar=..\\commons-beanutils-1.8.0.jar
+file.reference.commons-codec-1.15.jar=C:\\Users\\Gerardo\\Desktop\\UNICAES\\TPS\\Proyectos\\Librerias\\commons-codec-1.15\\commons-codec-1.15.jar
 file.reference.commons-collections-2.1.jar=..\\commons-collections-2.1.jar
 file.reference.commons-digester-1.7.jar=..\\commons-digester-1.7.jar
 file.reference.commons-logging-1.0.2.jar=..\\commons-logging-1.0.2.jar
@@ -68,7 +69,8 @@ javac.classpath=\
     ${file.reference.jdtcore-3.1.0.jar}:\
     ${file.reference.jfreechart-1.0.12.jar}:\
     ${file.reference.xml-apis-1.3.02.jar}:\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${file.reference.commons-codec-1.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
